--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,20 @@ h1{
     text-align: center;
     
 }
+.menu_container{
+    display: flex;
+    flex-direction: column;
+}
 .navbar-light .navbar-nav .nav-link {
      color: #a3c92d;
 }
-.logo{
+.logo img{
     max-width: 200px;
+}
+.header_menu{
+    display: flex;
+      flex-direction: row;
+      justify-content: space-around;
 }
 .manzana_verde{
     display: none;
@@ -63,10 +72,33 @@ h2, h3, h5{
     background: #2e3d02;
     margin-bottom: 1rem;
 }
+.frutas_izq{
+    display: none;
+}
+.frutas_der{
+    display: none;
+}
+.container_historia{
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.bloque_melo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.melo{
+    height: 250px;
+    width: 250px;
+    align-self: center;
+    padding: 0.5rem;
+}
 @media screen and (min-width: 778px){
   .menu_container{
-      display: flex;
-      flex-direction: column;
+     flex-direction: column;
   }
   .navbar-light .navbar-nav .nav-link {
     padding: 1rem;
@@ -100,6 +132,51 @@ h2, h3, h5{
   }
   .container_historia{
       display: flex;
+      flex-direction: row;
+      justify-content: center;
+
+  }
+  .frutas_izq{
+      display: block;
+  }
+  .frutas_der{
+      display: block;
+  }
+  .bloque_melo{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+  .melo{
+      height: 250px;
+      width: 250px;
+      align-self: center;
+      padding: 0.5rem;
+  }
+  h3{
+      font-size: 1.50rem;
+  }
+  .productos{
+    display: flex;
+    flex-direction: column;
+  }
+  .slide_productos{
+      align-self: center;
+      padding: 1rem;
+      width: 45%;
+      height: 45%;
+      
+  }
+  .blog_section{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      
+  }
+  .agencias{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
   }
 
 }
