--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html{
 }
 body{
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 h1{
     padding: 1rem;
@@ -25,6 +26,9 @@ h1{
       flex-direction: row;
       justify-content: space-around;
 }
+.titulo1{
+    margin-top: 2rem;
+}
 .manzana_verde{
     display: none;
 }
@@ -34,16 +38,24 @@ h1{
 h2, h3, h5{
     text-align: center;
     color: #a3c92d;
-    font-size: 1rem;
+    font-size: 1.50rem;
+    font-family: 'Kalam', cursive;
+    font-weight: 400;
+}
+h4{
+    font-family: 'Kalam', cursive;
+    font-size: 1.25rem;
+    font-weight: bold;
 }
 .cont-servicios{
-    max-width: 180px;
+    max-width: 200px;
     padding: 1rem;
 }
+.card-img-top{
+    max-width: 180px;
+}
 .servicios{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 1rem;
 }
 .card{
     display: flex;
@@ -78,6 +90,13 @@ h2, h3, h5{
 .frutas_der{
     display: none;
 }
+.servicios{
+    display: flex;
+    justify-content: center;
+}
+.card-body{
+    background: #bcd66c;
+}
 .container_historia{
     padding: 1rem;
     display: flex;
@@ -95,6 +114,9 @@ h2, h3, h5{
     width: 250px;
     align-self: center;
     padding: 0.5rem;
+}
+.blog_section{
+    margin-top: 2rem;
 }
 @media screen and (min-width: 778px){
   .menu_container{
