--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h4{
     display: flex;
     justify-content: center;
 }
-.card-body{
+.card-background{
     background: #bcd66c;
 }
 .container_historia{
