cambios en servicios

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ h4{
 .toggle-services{
     
     display: flex;
+    flex-direction: column;
     justify-content: center;
     
 }
@@ -66,7 +67,15 @@ h4{
     padding: 1rem;
 }
 .card-img-top{
-    max-width: 180px;
+    max-width: 150px;
+    
+}
+.img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    
 }
 .servicios{
   margin: 1rem;
@@ -93,6 +102,7 @@ h4{
     background: #a3c92d;
     color: white;
     padding: 1rem;
+    font-size: 0.75rem;
 }
 .agencias .btn-primary{
     background: #2e3d02;
@@ -161,6 +171,9 @@ h4{
   }
   .manzana_roja{
       display: block;
+  }
+  .toggle-services{
+      flex-direction: row;
   }
   .servicios{
       display: flex;
