--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ h4{
     padding: 1rem;
 }
 .card-img-top{
-    max-width: 150px;
-    
+    max-width: 200px;
+    max-height: 200px;
 }
 .img-container{
     display: flex;
@@ -142,6 +142,13 @@ h4{
 .blog_section{
     margin-top: 2rem;
 }
+.social-media{
+    font-size: 1rem;
+       
+}
+.social{
+    color: white;
+}
 @media screen and (min-width: 778px){
   .menu_container{
      flex-direction: column;
@@ -159,6 +166,11 @@ h4{
   }
   h3{
       font-size: 3rem !important;
+  }
+  .carousel{
+      width: 60%;
+      height: auto;
+      margin: 0 auto
   }
      .titulo1{
       display: flex;
@@ -206,6 +218,9 @@ h4{
   h3{
       font-size: 1.50rem;
   }
+  h4{
+      font-size: 1rem;
+  }
   .productos{
     display: flex;
     flex-direction: column;
@@ -227,6 +242,10 @@ h4{
       display: flex;
       flex-direction: row;
       justify-content: space-around;
+  }
+  .texto-footer{
+      line-height: 10px;
+      font-size: 12px;
   }
 
 }
