--- a/css/style.css
+++ b/css/style.css
@@ -232,13 +232,24 @@ h4{
     display: flex;
     flex-direction: column;
   }
-  .slide_productos{
+ /*  .slide_productos{
       align-self: center;
       padding: 1rem;
       width: 45%;
       height: 45%;
       
+  } */
+  .carousel-inner{
+      display: flex;
+      width: 100%; 
+      flex-direction: column; 
   }
+  .contenedor_productos{
+      width: 40%;
+      align-self: center;
+      margin: 2rem;
+  }
+ 
   .blog_section{
       display: flex;
       flex-direction: row;
