--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html{
 body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
+
 }
 h1{
     padding: 1rem;
@@ -156,6 +157,16 @@ h4{
 .social{
     color: white;
 }
+.fa-chevron-circle-left:before {
+    content: "\f137";
+    color: black;
+}
+.fa-chevron-circle-right:before {
+    content: "\f138";
+    color: black;
+}
+
+
 @media screen and (min-width: 778px){
   .menu_container{
      flex-direction: column;
@@ -248,6 +259,7 @@ h4{
       width: 40%;
       align-self: center;
       margin: 2rem;
+      
   }
  
   .blog_section{
