--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ h3, h5{
 h4{
     
     font-size: 1.50rem !important;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
     
 }
 .toggle-services{
