--- a/css/style.css
+++ b/css/style.css
@@ -255,10 +255,11 @@ h4{
   .carousel-inner{
       display: flex;
       width: 100%; 
+      height: 50%;
       flex-direction: column; 
   }
   .contenedor_productos{
-      width: 40%;
+      width: 20%;
       align-self: center;
       margin: 2rem;
       
